# CourseMate-AI

./: pyproject.toml
