[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coursemate-ai"
version = "0.1.0"
description = "A RAG-based AI application powered by Mistral AI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # LLM Provider
    "mistralai>=1.0.0",

    # LangChain Ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-text-splitters>=0.3.0",

    # Vector Store
    "chromadb>=0.5.0",

    # Embeddings
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.24.0",
    "tokenizers>=0.19.0",

    # Document Loaders & Parsers
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20231228",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "lxml>=5.0.0",
    "markdown>=3.6",
    "unstructured[all-docs]>=0.15.0",

    # Text Processing & Chunking
    "tiktoken>=0.7.0",
    "nltk>=3.8.0",
    "spacy>=3.7.0",
    "rapidfuzz>=3.9.0",

    # Web Scraping & Fetching
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "requests>=2.32.0",
    "playwright>=1.44.0",

    # API Framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data Validation & Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Data Processing
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # Caching & Storage
    "diskcache>=5.6.0",
    "redis>=5.0.0",

    # Resilience & Retry
    "tenacity>=8.3.0",

    # Observability & Logging
    "loguru>=0.7.0",
    "rich>=13.7.0",

    # Async Utilities
    "anyio>=4.4.0",
    "asyncio-throttle>=1.0.2",

    # Miscellaneous Utilities
    "tqdm>=4.66.0",
    "python-slugify>=8.0.0",
    "shortuuid>=1.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",  # async test client
    "ruff>=0.4.0",
    "black>=24.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipython>=8.24.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

gpu = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "faiss-gpu>=1.7.4",
]

cpu = [
    "torch>=2.3.0",
    "faiss-cpu>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
